# mistpp

./: .clang-format  CMakeLists.txt  README.md  mist++.pc.in
include/mist/: mist.hpp
src/: mist.cpp
test/: CMakeLists.txt  main.cpp
